Added css to scale and commented out bootstrap. Minor text changes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       {% if isMyBirthday %}
-        Yes it is! Say happy birthday!
+        Yup!
       {% else %}
         Nope!
       {% endif %}
