--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,7 +1,8 @@
 body {
   text-align: center;
   font-size: 40px;
-  font-size: 25vw;
+  font-size: 20vw;
   font-family: sans-serif;
   width: 100%;
+  overflow-x: hidden;
 }
